Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code_Group__c/SMAX_PS_Fault_Code_Group__c.object-meta.xml
<CustomObject>
    <label>Fault Code Group</label>
    <nameField>
        <label>Fault Code Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fault Code Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>