Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code_Group__c/fields/SMAX_PS_Code_Group__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Code_Group__c</fullName>
    <externalId>true</externalId>
    <label>Code Group</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>