Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code_Group__c/fields/SMAX_PS_Code_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Code_Group_Type__c</fullName>
    <label>Code Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMX_PS_Code_Group_Type</valueSetName>
    </valueSet>
</CustomField>