Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code_Group__c/listViews/All_Fault_Code_Groups.listView-meta.xml
<ListView>
    <fullName>All_Fault_Code_Groups</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Code_Family__c</columns>
    <columns>SMAX_PS_Code_Group__c</columns>
    <columns>SMAX_PS_Code_Group_Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Fault Code Groups</label>
    <language>en_US</language>
</ListView>